--- a/Pages/Register/registerStyle.css
+++ b/Pages/Register/registerStyle.css
@@ -19,6 +19,7 @@
     width: 100%;
     max-width: 1200px;
     height: 80%;
+    max-height: 80%;
     background-color: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
