--- a/style.css
+++ b/style.css
@@ -104,14 +104,25 @@ body {
 }
 
 .search-box {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: flex-start; /* Keep input aligned to the left */
   flex-grow: 1; /* Allow the input to take up remaining space */
 }
 
+.city-area-size {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.price-range {
+  display: flex;
+  gap: 20px;
+}
+
 .search-box input {
-  width: 100%; /* Make input take the remaining width */
+  width: 280px; /* Make input take the remaining width */
   max-width: 600px; /* Limit the input's width */
   height: 20px;
   border: none;
@@ -134,6 +145,16 @@ body {
   color: white;
   background-color: rgb(0, 62, 149);
   font-size: 16px;
+}
+
+.page-title {
+  margin: 0 auto;
+  margin-top: 20px;
+  max-width: 940px;
+  font-family: 'Roboto';
+  font-weight: 900;
+  font-size: 25px;
+  color: rgb(0, 62, 149);
 }
 
 
@@ -236,12 +257,10 @@ body {
   cursor: pointer;
   padding: 0;
   margin-top: 20px;
-  margin-left: -12px;
 }
 
-.fav-button img {
-  width: 48px; /* Adjust size */
-  height: 48px;
+.fav-icon:hover {
+  fill: rgb(0, 62, 149);
 }
 
 .flat-price-and-fav {
