--- a/Pages/Login/loginStyle.css
+++ b/Pages/Login/loginStyle.css
@@ -16,9 +16,7 @@ body {
 }
 
 .login-container {
-  width: 100%;
-  max-width: 1200px;
-  height: 80%;
+  min-height: 90vh;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -27,7 +25,7 @@ body {
 }
 
 .image-section {
-  width: 67%;
+  width: 70%;
 }
 
 .image {
@@ -37,8 +35,7 @@ body {
 }
 
 .form-section {
-  width: 25%;
-  padding: 40px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -117,4 +114,43 @@ body {
 
 .link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px){
+  .login-container {
+    flex-direction: column;
+    width: 90%;
+    min-height: auto;
+  }
+
+  .image-section {
+    display: none;
+  }
+
+  .form-section {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    margin: 10% 0;
+  }
+
+  .form {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  .input {
+    box-sizing: border-box;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  .input-div {
+    width: 100%;
+    margin-bottom: 15px;
+  }
 }
