--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   font-style: normal;
 }
 
+
 header {
   background-color: rgb(0, 62, 149);
   display: flex;
@@ -286,3 +287,45 @@ body {
   width: 200px;
 }
 
+/* Media query for mobile devices */
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .headerNav {
+    flex-direction: column;
+    max-width: 90%;
+    gap: 5px;
+  }
+
+  .logo {
+    margin-right: 0;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .navItem {
+    text-align: center;
+  }
+
+  .menuContainer {
+    width: 100%;
+  }
+
+  .menuButton {
+    justify-content: center;
+  }
+
+  .dropdownMenu {
+    position: static;
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+  }
+
+  .dropdownItem {
+    text-align: center;
+  }
+}
