--- a/Pages/Login/loginStyle.css
+++ b/Pages/Login/loginStyle.css
@@ -11,7 +11,7 @@ body {
   align-items: center;
   font-family: 'Roboto', sans-serif;
   justify-content: center;
-  height: 95vh;
+  height: 90vh;
   background-color: #f3f4f6;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 .image-section {
-  width: 70%;
+  width: 60%;
 }
 
 .image {
@@ -35,7 +35,8 @@ body {
 }
 
 .form-section {
-  width: 30%;
+  width: 35vh;
+  margin-left: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
