--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header {
 .navItem {
   color: white;
   text-decoration: none;
+  text-transform: capitalize;
   padding: 10px;
   justify-content: space-between;
 }
