--- a/Pages/Login/loginStyle.css
+++ b/Pages/Login/loginStyle.css
@@ -9,34 +9,33 @@
 body {
   display: flex;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
   background-color: #f3f4f6;
 }
 
 .login-container {
-  min-height: 90vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
-  display: flex;
 }
 
 .image-section {
-  width: 60%;
+  width: 70%;
 }
 
 .image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
 .form-section {
-  width: 35vh;
-  margin-left: 120px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,19 +49,16 @@ body {
 }
 
 .form {
-  margin: 24px 0 24px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 6px 0 6px 0;
 }
 
 .input-div {
-    margin: 0 0 30px 0;
-}
-
-.names {
-  margin: 0 0 60px 0;
-}
-
-.passwords {
-  margin: 60px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
 }
 
 .label {
@@ -73,7 +69,6 @@ body {
 }
 
 .input {
-  width: 100%;
   padding: 10px;
   border: 1px solid #d1d5db;
   border-radius: 6px;
@@ -86,8 +81,6 @@ body {
 }
 
 .button {
-  width: 100%;
-  margin-top: 20px;
   padding: 12px;
   background-color: #3b82f6;
   color: white;
@@ -117,10 +110,10 @@ body {
   text-decoration: underline;
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
   .login-container {
     flex-direction: column;
-    width: 90%;
+    width: 95%;
     min-height: auto;
   }
 
@@ -129,29 +122,17 @@ body {
   }
 
   .form-section {
-    width: 100%;
+    width: 90%;
     box-sizing: border-box;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    margin: 10% 0;
-  }
-
-  .form {
-    margin: 0 auto;
-    width: 80%;
+    padding: 20px;
   }
 
   .input {
     box-sizing: border-box;
   }
 
-  .button {
-    width: 100%;
-  }
-
   .input-div {
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 15px;
   }
 }
