--- a/Pages/Register/registerStyle.css
+++ b/Pages/Register/registerStyle.css
@@ -1,119 +1,120 @@
 @font-face {
-    font-family: "Roboto";
-    src: url("../../assets/Roboto/Roboto-VariableFont_wdth\,wght.ttf")
-      format("truetype");
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  body {
-    display: flex;
-    align-items: center;
-    font-family: 'Roboto', sans-serif;
-    justify-content: center;
-    min-height: 90vh;
-    background-color: #f3f4f6;
-  }
-  
-  .register-container {
-    min-height: 90vh;
-    background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    display: flex;
-  }
-  
-  .image-section {
-    width: 60%
-  }
-  
-  .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .form-section {
-    width: 35vh;
-    margin-left: 120px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #374151;
-    text-align: center;
-  }
-  
-  .form {
-    width: 100%;
-    margin: 12px 0 12px 0;
-  }
-  
-  .input-div {
-      margin: 0 0 15px 0;
-  }
-  
-  .label {
-    display: block;
-    color: #374151;
-    font-weight: 500;
-    margin-bottom: 8px;
-  }
-  
-  .input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #d1d5db;
-    border-radius: 6px;
-    outline: none;
-    transition: border 0.3s;
-  }
-  
-  .input:focus {
-    border-color: #3b82f6;
-  }
-  
-  .button {
-    width: 100px;
-    margin-left: 35%;
-    margin-top: 20px;
-    padding: 12px;
-    background-color: #3b82f6;
-    color: white;
-    font-weight: bold;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .button:hover {
-    background-color: #2563eb;
-  }
-  
-  .text {
-    margin-top: 16px;
-    text-align: center;
-    color: #6b7280;
-  }
-  
-  .link {
-    color: #3b82f6;
-    text-decoration: none;
-  }
-  
-  .link:hover {
-    text-decoration: underline;
-  }
-  
+  font-family: "Roboto";
+  src: url("../../assets/Roboto/Roboto-VariableFont_wdth\,wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  justify-content: center;
+  min-height: 90vh;
+  background-color: #f3f4f6;
+}
+
+.register-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.image-section {
+  width: 70%;
+  height: 100%; /* Ensures the image section fills the container height */
+  position: relative;
+}
+
+.image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.form-section {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 6px 0 6px 0;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #374151;
+  text-align: center;
+}
+
+.input-div {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.label {
+  color: #374151;
+  font-weight: 500;
+  margin-bottom: 8px;
+}
+
+.input {
+  padding: 10px;
+  border: 1px solid #d1d5db;
+  border-radius: 6px;
+  outline: none;
+  transition: border 0.3s;
+}
+
+.input:focus {
+  border-color: #3b82f6;
+}
+
+.button {
+  width: 100px;
+  padding: 12px;
+  background-color: #3b82f6;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #2563eb;
+}
+
+.text {
+  margin-top: 16px;
+  text-align: center;
+  color: #6b7280;
+}
+
+.link {
+  color: #3b82f6;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
 
 /* Mobile devices (max-width: 767px) */
-@media (max-width: 1024px){
+@media (max-width: 1024px) {
   .register-container {
     flex-direction: column;
     width: 95%;
@@ -125,28 +126,13 @@
   }
 
   .form-section {
-    margin-left: 6%;
     width: 90%;
     box-sizing: border-box;
     padding: 20px;
   }
 
-
-  .input {
-    box-sizing: border-box;
-  }
-
-  .button {
-    width: 100%;
-    margin-left: 0;
-  }
-
-  .names, .passwords {
-    flex-direction: column;
-  }
-
   .input-div {
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 15px;
   }
 }
